navbar: Fix stream + topic jump at 500px.
This resolves a bug where the "stream" tab item would be missaligned
with the rest of navbar and leave some empty space.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1756,7 +1756,6 @@ a:hover code {
             margin: 0px;
             padding: 0px;
             text-overflow: ellipsis;
-            height: 40px;
             padding: 0 5px;
         }
 
